add gui to setting view

--- a/app/src/main/res/layout/activity_password_confirm.xml
+++ b/app/src/main/res/layout/activity_password_confirm.xml
@@ -30,7 +30,7 @@
             <ImageView
                 android:layout_width="21dp"
                 android:layout_height="21dp"
-                android:src="@drawable/invalid_name"
+                android:src="@drawable/ic_chevron_left_black_24dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 />
@@ -62,11 +62,22 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="32.5dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="60dp"
                 android:layout_marginRight="60dp"
                 android:layout_marginTop="50dp"
                 android:hint="숫자, 영소문자 조합 7자 이상"
+                android:textSize="13sp"
+                android:inputType="textPassword"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:layout_marginTop="30dp"
+                android:hint="변경하실 비밀번호를 다시 입력해 주세"
                 android:textSize="13sp"
                 android:inputType="textPassword"
                 />
