--- a/app/src/main/res/layout/activity_profile_info_update.xml
+++ b/app/src/main/res/layout/activity_profile_info_update.xml
@@ -25,12 +25,12 @@
 
 
         <ImageView
-                android:id="@+id/iv_btn_category_board_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="10dp"
-                android:src="@drawable/ic_close_black_24dp"/>
+            android:layout_width="21dp"
+            android:layout_height="21dp"
+            android:src="@drawable/ic_chevron_left_black_24dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            />
 
         <ImageView
                 android:id="@+id/iv_btn_category_board_search"
@@ -278,9 +278,12 @@
 
 
     <Button
-            android:id="@+id/bt_profile_info_update_complete"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:text="확인"
-            android:background="#b0caea" android:textColor="#ffffff"/>
+        android:id="@+id/bt_profile_info_update_complete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:text="확인"
+        android:textColor="#ffffff"
+        android:layout_marginTop="50dp"/>
 
 </LinearLayout>
