--- a/app/src/main/res/layout/activity_passwd_modify.xml
+++ b/app/src/main/res/layout/activity_passwd_modify.xml
@@ -26,11 +26,10 @@
                 android:textStyle="bold"
                 android:textColor="#040404"
                 />
-
             <ImageView
                 android:layout_width="21dp"
                 android:layout_height="21dp"
-                android:src="@drawable/invalid_name"
+                android:src="@drawable/ic_chevron_left_black_24dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 />
@@ -62,7 +61,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="32.5dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="60dp"
                 android:layout_marginRight="60dp"
                 android:layout_marginTop="50dp"
