--- a/app/src/main/res/layout/activity_profile_image_update.xml
+++ b/app/src/main/res/layout/activity_profile_image_update.xml
@@ -21,14 +21,13 @@
             android:text="프로필 사진 변경"
            android:textColor="#040404"
             android:textSize="15sp" />
-
         <ImageView
-            android:id="@+id/iv_btn_category_board_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="21dp"
+            android:layout_height="21dp"
+            android:src="@drawable/ic_chevron_left_black_24dp"
             android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/ic_close_black_24dp" />
+            android:layout_marginLeft="10dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,7 +36,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="20dp"
-            android:textColor="#b0caea"
+            android:textColor="@color/colorPrimary"
             android:lineSpacingExtra="5sp"
             android:gravity="center_horizontal"
             android:text="완료"
