--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff"
+    android:background="#f9f9f9"
     tools:context=".Moohyeon.Activity.LoginActivity">
+
     <ImageView
         android:src="@drawable/ic_gings"
-        android:layout_marginTop="34.5dp"
+        android:layout_marginTop="69dp"
         android:layout_gravity="center"
-        android:layout_width="42.2dp"
-        android:layout_height="58.5dp"
+        android:layout_width="84.5dp"
+        android:layout_height="117dp"
         android:textColor="#222222"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="-20sp"
@@ -22,10 +23,12 @@
         />
     <LinearLayout
         android:layout_gravity="center"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="52dp"
         android:layout_width="324dp"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/signup2_round_background"
+        >
         <TextView
             android:layout_marginTop="15dp"
             android:layout_marginLeft="21dp"
@@ -50,7 +53,10 @@
         android:layout_gravity="center"
         android:layout_width="324dp"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="18dp"
+        android:orientation="horizontal"
+        android:background="@drawable/signup2_round_background"
+        >
         <TextView
             android:layout_marginTop="15dp"
             android:layout_marginLeft="21dp"
@@ -69,6 +75,7 @@
             android:layout_marginLeft="18dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:hint="**********"/>
     </LinearLayout>
     <TextView
@@ -78,33 +85,36 @@
         android:layout_gravity="center"
         android:layout_width="324dp"
         android:layout_height="50dp"
-        android:textSize="16sp"
-        android:textColor="#173f72"
+        android:textSize="17sp"
+        android:textColor="#ffffff"
         android:lineSpacingExtra="0sp"
         android:gravity="center"
-       android:text="LOGIN"
+       android:text="로그인"
         android:textStyle="bold"
         />
     <LinearLayout
         android:layout_gravity="right"
         android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="20dp"
+        android:layout_height="18dp">
         <TextView
-            android:layout_marginRight="27dp"
+            android:layout_marginRight="26dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:textColor="#5c5c5c"
             android:lineSpacingExtra="4sp"
-            android:gravity="center_horizontal"
-           android:text="Remember Me"
+            android:layout_gravity="center"
+           android:text="자동 로그인"
             />
 <CheckBox
     android:layout_marginRight="36.5dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/cb_login_auto_check_box"/>
+    android:id="@+id/cb_login_auto_check_box"
+    android:layout_gravity="center"
+    />
     </LinearLayout>
 
     <LinearLayout
