--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -10,19 +10,19 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="#b0caea"
+        android:layout_height="57dp"
+        android:background="@drawable/top"
         android:gravity="center"
         android:lineSpacingExtra="6sp"
         android:text="가입정보 입력"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="14sp" />
 
     <RelativeLayout
         android:gravity="center_vertical"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="37dp"
         android:layout_gravity="center"
-        android:background="#ffffff"
+        android:background="@drawable/signup2_round_background"
         android:layout_width="324dp"
         android:layout_height="48dp">
     <TextView
@@ -47,7 +47,7 @@
     <RelativeLayout
         android:layout_gravity="center"
         android:layout_marginTop="12dp"
-        android:background="#ffffff"
+        android:background="@drawable/signup2_round_background"
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
@@ -72,10 +72,10 @@
             />
         <Button
             android:layout_marginTop="5dp"
-            android:layout_marginRight="23dp"
+            android:layout_marginRight="5dp"
             android:layout_alignParentRight="true"
             android:id="@+id/tv_sign_up2_overlap_check"
-            android:background="#b0caea"
+            android:background="@color/colorPrimary"
             android:layout_width="50dp"
             android:layout_height="38dp"
             android:textSize="10sp"
@@ -93,17 +93,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="13sp"
-        android:textColor="#16b42b"
+        android:textColor="@color/colorPrimary"
         android:lineSpacingExtra="7sp"
         android:gravity="center_horizontal"
+        android:textStyle="bold"
         android:text=""
         />
 
     <RelativeLayout
         android:gravity="center_vertical"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
-        android:background="#ffffff"
+        android:background="@drawable/signup2_round_background"
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
@@ -122,6 +123,7 @@
             android:hint="숫자,영소문 7글자 조합"
             android:textSize="14sp"
             android:textColor="#999999"
+            android:inputType="textPassword"
             android:layout_marginLeft="113dp"
             />
     </RelativeLayout>
@@ -129,7 +131,7 @@
         android:gravity="center_vertical"
         android:layout_marginTop="12dp"
         android:layout_gravity="center"
-        android:background="#ffffff"
+        android:background="@drawable/signup2_round_background"
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
@@ -148,6 +150,7 @@
             android:hint="숫자,영소문 7글자 조합"
             android:textSize="14sp"
             android:textColor="#999999"
+            android:inputType="textPassword"
             android:layout_marginLeft="113dp"
             />
     </RelativeLayout>
@@ -159,21 +162,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
-            android:textColor="#64dfff"
+            android:textColor="@color/colorPrimary"
             android:lineSpacingExtra="7sp"
             android:gravity="center_horizontal"
+            android:textStyle="bold"
             android:text=""/>
 
     <TextView
         android:layout_marginTop="26dp"
         android:id="@+id/tv_sign_up2_confirm_number_send_message"
         android:layout_gravity="center"
-        android:background="#b0caea"
+        android:background="@color/colorPrimary"
         android:layout_width="324dp"
         android:layout_height="48dp"
         android:textSize="15sp"
         android:textColor="#f6f9fd"
         android:lineSpacingExtra="5sp"
         android:gravity="center"
-        android:text="인증번호 전송"/>
+        android:textStyle="bold"
+        android:text="가입하기"/>
 </LinearLayout>
