--- a/app/src/main/res/layout/activity_sign_up3.xml
+++ b/app/src/main/res/layout/activity_sign_up3.xml
@@ -9,12 +9,12 @@
     tools:context=".Moohyeon.Activity.SignUp3Activity">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="#b0caea"
+        android:layout_height="57dp"
+        android:background="@drawable/top"
         android:gravity="center"
         android:lineSpacingExtra="6sp"
         android:text="인증번호 입력"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="14sp" />
     <TextView
         android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
         android:textSize="14sp"
         android:textColor="#000000"
         android:lineSpacingExtra="6sp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="27dp"
         android:layout_marginLeft="30dp"
         android:text="이메일로 인증번호가 전송되었습니다."
         />
@@ -30,7 +30,7 @@
         android:gravity="center_vertical"
         android:layout_marginTop="30dp"
         android:layout_gravity="center"
-        android:background="#ffffff"
+        android:background="@drawable/signup2_round_background"
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
@@ -52,16 +52,16 @@
             android:layout_marginLeft="90dp"
             />
     </RelativeLayout>
-    <TextView
+    <Button
         android:layout_marginTop="50dp"
         android:id="@+id/tv_sign_up3_sign_up_complete"
         android:layout_gravity="center"
-        android:background="#b0caea"
+        android:background="@color/colorPrimary"
         android:layout_width="324dp"
         android:layout_height="48dp"
         android:textSize="15sp"
         android:textColor="#f6f9fd"
         android:lineSpacingExtra="5sp"
         android:gravity="center"
-        android:text="가입 완료"/>
+        android:text="인증하기"/>
 </LinearLayout>
