--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -1,92 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="66.5"
         >
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="25"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             >
-
-
-            <ImageView
-                android:id="@+id/mypage_background_img"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/invalid_name"
-                android:scaleType="fitXY"
-                />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#20000000"
-                />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:weightSum="25"
+                android:layout_height="250dp"
                 >
+
+                <ImageView
+                    android:id="@+id/mypage_background_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/invalid_name"
+                    android:scaleType="fitXY"
+                    />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#20000000"
+                    />
+
+                <ImageView
+                    android:id="@+id/iv_btn_my_page_setting"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/bt_setting" />
+
+                <ImageView
+                    android:id="@+id/iv_btn_other_page_close"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/bt_exit" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1.3"
-                    >
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="3.4"
-                    >
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        >
-
-                        <ImageView
-                            android:id="@+id/iv_btn_my_page_setting"
-                            android:layout_width="34dp"
-                            android:layout_height="34dp"
-                            android:layout_alignParentTop="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginRight="13dp"
-                            android:background="@drawable/mypage_setting_circle" />
-
-                        <ImageView
-                            android:id="@+id/iv_btn_other_page_close"
-                            android:layout_width="34dp"
-                            android:layout_height="34dp"
-                            android:layout_alignParentTop="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginRight="13dp"
-                            android:background="@drawable/otherpage_button" />
-                    </RelativeLayout>
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="84.8dp"
                     android:orientation="vertical"
-                    android:layout_weight="12.3"
-                    ></LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="8.2"
-                    android:orientation="vertical"
-                    android:weightSum="8.2"
+                    android:layout_marginTop="165dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -194,99 +162,94 @@
 
 
 
-            </LinearLayout>
 
 
-        </RelativeLayout>
+            </RelativeLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4.5"
-            android:orientation="vertical"
-            android:weightSum="45"
-            >
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:layout_height="45dp"
+                android:orientation="vertical"
                 >
-
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:weightSum="45"
+                    android:orientation="horizontal"
                     >
-                    <Button
-                        android:id="@+id/mypage_intro_btn"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="42"
-                        android:text="소개"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="15sp"
-                        android:gravity="center"
-                        android:background="#ffffff"
-                        />
-                    <View
-                        android:id="@+id/mypage_intro_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="3"
-                        android:background="@color/colorPrimary"
-                        />
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:weightSum="45"
+                        >
+                        <Button
+                            android:id="@+id/mypage_intro_btn"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="42"
+                            android:text="소개"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="15sp"
+                            android:gravity="center"
+                            android:background="#ffffff"
+                            />
+                        <View
+                            android:id="@+id/mypage_intro_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="3"
+                            android:background="@color/colorPrimary"
+                            />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:weightSum="45"
+                        >
+                        <Button
+                            android:id="@+id/mypage_act_btn"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="42"
+                            android:text="활동"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="15sp"
+                            android:gravity="center"
+                            android:background="#ffffff"
+                            />
+                        <View
+                            android:id="@+id/mypage_act_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="3"
+                            android:background="@color/colorPrimary"
+                            />
+                    </LinearLayout>
+
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:weightSum="45"
-                    >
-                    <Button
-                        android:id="@+id/mypage_act_btn"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="42"
-                        android:text="활동"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="15sp"
-                        android:gravity="center"
-                        android:background="#ffffff"
-                        />
-                    <View
-                        android:id="@+id/mypage_act_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="3"
-                        android:background="@color/colorPrimary"
-                        />
-                </LinearLayout>
-
-
-
 
             </LinearLayout>
 
+
+            <LinearLayout
+                android:id="@+id/mypage_content_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="#f9f9f9"
+                >
+
+            </LinearLayout>
+
+
         </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/mypage_content_layout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_weight="37"
-            android:background="#f9f9f9"
-            >
-
-        </LinearLayout>
-
 
     </LinearLayout>
 
-</LinearLayout>
+
+</ScrollView>
