Post OtherGuestBoard Complete.

--- a/app/src/main/res/layout/fragmet_my_page_introduce.xml
+++ b/app/src/main/res/layout/fragmet_my_page_introduce.xml
@@ -317,6 +317,7 @@
                 />
 
             <Button
+                android:id="@+id/mypage_board_more_btn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
