--- a/app/src/main/res/layout/rv_item_board.xml
+++ b/app/src/main/res/layout/rv_item_board.xml
@@ -114,11 +114,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_item_board_contents_image"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/iv_item_board_contents_image_viewpager"
             android:layout_width="match_parent"
             android:layout_height="280dp"
-            android:background="#b0caea" />
+            android:background="@color/colorPrimary"
+            >
+        </android.support.v4.view.ViewPager>
 
         <RelativeLayout
             android:layout_width="match_parent"
