--- a/app/src/main/res/layout/fragmet_my_page_introduce.xml
+++ b/app/src/main/res/layout/fragmet_my_page_introduce.xml
@@ -35,7 +35,6 @@
                     >
                     <ImageView
                         android:layout_centerHorizontal="true"
-
                         android:layout_width="23dp"
                         android:layout_height="23dp"
                         android:background="@drawable/invalid_name"
@@ -93,7 +92,6 @@
 
                     <ImageView
                         android:layout_width="18dp"
-
                         android:layout_height="14.1dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
@@ -122,7 +120,7 @@
                         android:background="@drawable/box_on"
                         >
                         <TextView
-
+                            android:id="@+id/mypage_intro_activity_part"
                             android:layout_centerHorizontal="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -293,7 +291,24 @@
                 android:textColor="#222222"
                 android:layout_marginBottom="16dp"
                 />
-
+            <ImageView
+                android:id="@+id/mypage_board_content_iv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="38dp"
+                android:layout_below="@+id/mypage_board_content_tv"
+                android:layout_marginTop="5dp"
+                />
+            <ImageView
+                android:id="@+id/mypage_board_content_iv2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="38dp"
+                android:layout_below="@+id/mypage_board_content_iv"
+                android:layout_marginTop="5dp"
+                />
 
         </RelativeLayout>
 
