--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,79 +19,68 @@
             android:layout_weight="574.3" >
         </FrameLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.3dp"
-            android:background="#95989a"
-            />
 
-        <LinearLayout
-            android:id="@+id/main_tab_linear"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="47"
-            android:orientation="horizontal"
-            android:background="#ebf8f8f8"
-            >
 
-            <ImageButton
-                android:id="@+id/main_hometab_btn"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="bottom"
-                android:background="#00000000"
-                android:padding="7sp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/hometab_selector" />
-
-            <ImageButton
-                android:id="@+id/main_directory_btn"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#00000000"
-                android:padding="6sp"
-                android:scaleType="fitCenter"
-                android:layout_gravity="bottom"
-                android:src="@drawable/directorytab_selector"/>
-
-            <ImageButton
-                android:id="@+id/main_lounge_btn"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#00000000"
-                android:padding="2sp"
-                android:scaleType="fitCenter"
-                android:layout_gravity="bottom"
-                android:src="@drawable/lounge_selector" />
-
-            <ImageButton
-                android:id="@+id/main_alarm_btn"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#00000000"
-                android:padding="7sp"
-                android:scaleType="fitCenter"
-                android:layout_gravity="bottom"
-                android:src="@drawable/alarm_selector" />
-
-            <ImageButton
-                android:id="@+id/main_mypage_btn"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#00000000"
-                android:padding="7sp"
-                android:scaleType="fitCenter"
-                android:layout_gravity="bottom"
-                android:src="@drawable/mypage_selector" />
-
-        </LinearLayout>
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="#95989a"
+        android:layout_above="@+id/main_tab_linear"
+        />
+    <LinearLayout
+        android:id="@+id/main_tab_linear"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:background="#ebf8f8f8"
+        >
+
+        <ImageButton
+            android:id="@+id/main_hometab_btn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="bottom"
+            android:background="#00000000"
+            android:src="@drawable/hometab_selector" />
+
+        <ImageButton
+            android:id="@+id/main_directory_btn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#00000000"
+            android:src="@drawable/directorytab_selector"/>
+
+        <ImageButton
+            android:id="@+id/main_lounge_btn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#00000000"
+            android:src="@drawable/lounge_selector" />
+
+        <ImageButton
+            android:id="@+id/main_alarm_btn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#00000000"
+            android:src="@drawable/alarm_selector" />
+
+        <ImageButton
+            android:id="@+id/main_mypage_btn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#00000000"
+            android:src="@drawable/mypage_selector" />
+
+    </LinearLayout>
+
 
 
 </RelativeLayout>
