--- a/app/src/main/res/layout/rv_item_lounge.xml
+++ b/app/src/main/res/layout/rv_item_lounge.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -11,6 +12,7 @@
         android:id="@+id/iv_rv_item_lounge_image"
         >
         <ImageView
+            android:id="@+id/rl_iv_lounge_image"
             android:layout_centerInParent="true"
             android:layout_width="290dp"
             android:layout_height="210dp"
@@ -21,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="7sp"
             android:layout_marginBottom="50dp"
